# bool-tool

./: .clang-tidy  CMakeLists.txt
data/: bool_tool.gresource.xml
data/bool_tool/: style.css
data/bool_tool/applications/: com.github.TarekSaeed0.bool_tool.desktop
data/bool_tool/ui/: application_window.ui  boolean_function_input.ui
include/bool_tool/: application.h  application_window.h  boolean_environment.h  boolean_expression.h  boolean_function.h  boolean_function_input.h  boolean_implicants.h  boolean_minterms.h  boolean_status.h  boolean_variables.h
src/: main.c
src/bool_tool/: application.c  application_window.c  boolean_environment.c  boolean_expression.c  boolean_function.c  boolean_function_input.c  boolean_implicants.c  boolean_minterms.c  boolean_variables.c
